update git and github